--- a/APP/CRUD-GENERATOR/gs-starter/src/app/gs-nav/base/base.component.scss
+++ b/APP/CRUD-GENERATOR/gs-starter/src/app/gs-nav/base/base.component.scss
@@ -1,11 +1,11 @@
+@import "src/assets/color-themes/deep-blue/main";
 .nav {
 
     padding:10px;
 }
 
 
-
 .base {
 
-    background: linear-gradient(white,lightblue);
+    background:$main-color;
 }
