--- a/APP/CRUD-GENERATOR/gs-starter/src/app/rh/user-group/userTOgroup/userTOgroup.component.html
+++ b/APP/CRUD-GENERATOR/gs-starter/src/app/rh/user-group/userTOgroup/userTOgroup.component.html
@@ -1,29 +1,73 @@
-<mat-card  fxLayout="column" fxLayoutAling="space-between">
 
-    <mat-card-header fxFlex="5" fxLayout="column" fxLayout="center">
-            Liste des group
-    </mat-card-header>
+<mat-expansion-panel fxLayout="column">
+
+<mat-expansion-panel-header   fxFlex="5" class="lead" fxLayout="column" fxLayout="center">
+  <mat-panel-title>
+  <p class="h4"> group </p>
+  </mat-panel-title>
+
+  <mat-panel-description>
+
+    <p class="h4"> Manage yours groups </p>
+  </mat-panel-description>
+
+</mat-expansion-panel-header>
 
 
-    <mat-card-content style="overflow: auto" fxFlex="80" fxLayout="column" fxLayoutGap="5" fxLayoutAlign="flex-start" >
 
-        <mat-card *ngFor="let user_group of user_groupList" fxFLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between">
 
-                <div class="bg-transparent" fxFlex="40" fxFlex.xs="80">
+    <mat-expansion-panel style="overflow: auto "  fxLayout="column" fxLayoutGap="5" fxLayoutAlign="flex-start">
+
+      <mat-expansion-panel-header>
+
+          <mat-form-field>
+            <mat-label class="h5">Recherche d'un group </mat-label>
+            <input matInput class="form-control" name="groupSearch"
+           type="text"  [formControl]="groupSearch">
+          </mat-form-field>
+
+      </mat-expansion-panel-header>
+      <mat-progress-spinner *ngIf="!foundGroups"> </mat-progress-spinner>
+      <ng-template *ngIf="foundGroups">
+      <mat-card *ngFor="let group of foundGroups" fxFLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between">
+        <div class="bg-transparent" fxFlex="40" fxFlex.xs="80">
+          {{group}}
+        </div>
+        <div flFlex="20">
+          <button class="btn btn-primary" mat-button (click)="actionJoin(user_group)">QUITTER</button>
+        </div>
+      </mat-card>
+      </ng-template>
+    </mat-expansion-panel>
+
+
+
+
+  <mat-expansion-panel style="overflow: auto "  fxLayout="column" fxLayoutGap="5" fxLayoutAlign="flex-start" >
+
+    <mat-expansion-panel-header fxFlex="5" fxLayout="column" fxLayout="center">
+      <p class="h5"> Liste des groups </p>
+    </mat-expansion-panel-header>
+
+
+
+    <mat-card *ngFor="let user_group of user_groupList" fxFLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between">
+                  <div class="bg-transparent" fxFlex="40" fxFlex.xs="80">
                         Informations sur le group ici
-                </div>  
-
-                <div flFlex="20">
-                            <button mat-button (click)="actionQuit(user_group)">QUITTER</button>
+                  </div>
+          <div flFlex="20">
+                            <button class="btn btn-danger" mat-button (click)="actionQuit(user_group)">QUITTER</button>
                 </div>
-            
-        
         </mat-card>
 
-    </mat-card-content>
+
+</mat-expansion-panel>
 
 
 
 
 
-</mat-card>
+
+</mat-expansion-panel>
+
+
