--- a/APP/CRUD-GENERATOR/gs-starter/src/app/nav/nav.component.html
+++ b/APP/CRUD-GENERATOR/gs-starter/src/app/nav/nav.component.html
@@ -1,4 +1,23 @@
-<gs-nav title="GS-STARTER" orientation="top">
+
+
+
+
+<gs-nav title={{app_name}} orientation="top">
+
+  <div class="logo">
+    <a class="simple-text">
+      <div class="logo-img" style="width:100%">
+
+        <h3>{{app_name}}</h3>
+
+      </div>
+
+    </a>
+  </div>
+
+  <hr>
+
+
   <nav-item label="Accueil" target="home">
 
   </nav-item>
