--- a/APP/CRUD-GENERATOR/gs-starter/src/app/gs-nav/top-nav/top-nav.component.html
+++ b/APP/CRUD-GENERATOR/gs-starter/src/app/gs-nav/top-nav/top-nav.component.html
@@ -14,7 +14,7 @@
         <li>
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <i class="ti-panel"></i>
-            <p>Stats</p>
+            <p>Statistiques</p>
           </a>
         </li>
         <li class="dropdown">
@@ -35,7 +35,7 @@
         <li>
           <a href="#">
             <i class="ti-settings"></i>
-            <p>Settings</p>
+            <p>Paramètres</p>
           </a>
         </li>
       </ul>
